--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^3.7.5",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-router-flux": "^3.38.0",
-    "react-native-vector-icons": "^4.0.1"
+    "react-native-vector-icons": "^4.0.1",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
